--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@reduxjs/toolkit": "^2.8.1",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.75.6",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
     "boxicons": "^2.1.4",
     "class-variance-authority": "^0.7.1",
@@ -46,9 +47,13 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
+    "react-datepicker": "^8.3.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "react-redux": "^9.2.0",
+    "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
