--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@radix-ui/react-radio-group": "^1.3.6",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-separator": "^1.1.6",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@reduxjs/toolkit": "^2.8.1",
     "@tailwindcss/vite": "^4.1.3",
@@ -48,6 +48,7 @@
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
     "react-datepicker": "^8.3.0",
+    "react-day-picker": "^8.10.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
